--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: Some Person
 ###############################################
 
 navbar-links:
-  Teaching: "aboutme"
+  CV: "aboutme"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
