--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ author: Some Person
 
 navbar-links:
   CV: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
+#  Resources:
+#   - Beautiful Jekyll: "https://beautifuljekyll.com"
+#    - Learn markdown: "https://www.markdowntutorial.com/"
   Teaching: "teaching"
 
 ################
