--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: Jiaqi Guo
+title: Jiaqi Guo (郭嘉骐)
 
 # Your name to show in the footer
 author: Jiaqi Guo
